fixed bio font-size on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -589,7 +589,7 @@ footer {
     &-wrapper {
         margin-bottom: 0.66%;
         p {
-            font-size: 1.22em;
+            font-size: 120%;
             line-height: $contentLineHeight;
             width: 88%;  
         }
